Fix debugging page overflowing on some mobile devices
Fix #218

--- a/resources/scss/components/page-base.scss
+++ b/resources/scss/components/page-base.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-flow: column;
     min-height: 100vh;
+    overflow: hidden;
 
     > .header {
         background-color: transparent;
